# Mukei

./: .ci-activation-core-final-verify  .ci-protocol-v2-verify  .ci-transactional-activation-verify  .gitignore  .gitmodules  AF.md  HARDENING_NOTES_v1.0_qml_sol.md  LICENSE  MERGE_NOTES_v1.0_qml_sol.md  NOTICE  PATCHED_FILES_v0.1_sol.txt  PATCHED_FILES_v0.2_sol.txt  PATCHED_FILES_v0.4_sol.txt  PATCHED_FILES_v0.5_sol.txt  PATCH_NOTES_QML_PHASE1.md  PATCH_NOTES_QML_PHASE2.md  PATCH_NOTES_QML_PHASE3.md  PATCH_NOTES_QML_PHASE4.md  PATCH_NOTES_QML_PHASE6.md  PATCH_NOTES_v0.1_sol.md  PATCH_NOTES_v0.2_sol.md  PATCH_NOTES_v0.3_sol.md  PATCH_NOTES_v0.5_sol.md  QML_PHASE2_CONTENTS.txt  QML_PHASE2_VALIDATION.txt  QML_PHASE4_CHANGED_FILES.txt  QML_PHASE5_CHANGED_FILES.txt  QML_PHASE5_VALIDATION.txt  README.md  SECURITY.md  VALIDATION_v0.4_sol.txt  VALIDATION_v0.5_sol.txt  ci-clippy-fix.patch  clippy-diagnostics.txt  deny.toml  qmldir-current.txt  rust-toolchain.toml
qml/: .qmllint.ini  CMakeLists.txt  MainWindow.qml  README.md  SECURITY.md  main.cpp  qml.qrc  timeline_model.cpp  timeline_model.h
qml/android/: AndroidManifest.xml
qml/architecture/: AppCoordinator.qml  AppStateHub.qml  IntentDispatcher.qml  PresentationPolicy.qml  SnapshotController.qml  qmldir
qml/assets/fonts/: README.md
qml/cmake/: MukeiAndroidApkInitialCache.cmake
qml/components/: AIMessageBubble.qml  AccessibilityAnnouncer.qml  BranchSwitcherSheet.qml  ChatComposer.qml  ChatTimelineEvent.qml  CodeBlockComponent.qml  ConfirmationDialog.qml  ConversationList.qml  CopyButton.qml  DestructiveButton.qml  DestructiveConfirmDialog.qml  FontLoader.qml  FullScreenModal.qml  GhostButton.qml  HapticFeedback.qml  IconButton.qml  LeftDrawer.qml  MarkdownRenderer.qml  ModalSheet.qml  MukeiIcon.qml  NetworkBanner.qml  PrimaryButton.qml  ProgressBar.qml  PromptCard.qml  RAGChunkCard.qml  SearchField.qml  SecondaryButton.qml  SettingsTextField.qml  SkeletonLoader.qml  Spinner.qml  StatusPill.qml  StoragePressureCard.qml  StreamingCaret.qml  ThinkingAccordion.qml  ToastNotification.qml  ToolResultCard.qml  UserMessageBubble.qml  qmldir
qml/events/: EventDispatcher.qml  qmldir
qml/screens/: ChatScreen.qml  CompatibilityScreen.qml  DiagnosticsScreen.qml  DocumentsScreen.qml  DownloadsScreen.qml  EmptyChatScreen.qml  ModelManagerScreen.qml  ModelPickerScreen.qml  RagRebuildPromptScreen.qml  RecoveryScreen.qml  SafeModeScreen.qml  SettingsScreen.qml  StartupScreen.qml  ToolResultExpandedScreen.qml  VerificationScreen.qml  WelcomeScreen.qml  qmldir
qml/scripts/: qml_architecture_analyzer.py  qml_contract_guard.py  qml_interaction_audit.py  qml_security_analyzer.py  qmllint_allowlist_guard.py
qml/shell/: AdaptiveNavigation.qml  AppShell.qml  BannerHost.qml  DialogHost.qml  OperationOverlayHost.qml  RouterHost.qml  SheetHost.qml  SnackbarHost.qml  qmldir
qml/stores/: AccessibilityStore.qml  CapabilityStore.qml  ChatStore.qml  ContractStore.qml  ConversationStore.qml  DiagnosticsStore.qml  DocumentStore.qml  DownloadStore.qml  ErrorStore.qml  LifecycleStore.qml  ModelStore.qml  NavigationStore.qml  OperationStore.qml  RecoveryStore.qml  ResponsiveStore.qml  SettingsStore.qml  StorageStore.qml  UiSessionStore.qml  qmldir
qml/tests/: FakeProtocolAgent.qml  tst_AIBubbleReaderWash.qml  tst_AccessibleNamesExist.qml  tst_AccessibleReadingOrder.qml  tst_AnnouncementBatching.qml  tst_BubbleFooterDensity.qml  tst_ChatScreen.qml  tst_ComposerMultiline.qml  tst_ContractNegotiation.qml  tst_DestructiveConfirmTwoTap.qml  tst_DrawerSwipe.qml  tst_EventDispatcher.cpp  tst_EventDispatcher.qml  tst_FirstRunCanonicalPath.qml  tst_FocusRing.qml  tst_FontScaleExtreme.qml  tst_HeaderChromeCompact.qml  tst_HighContrast.qml  tst_InteractionContracts.qml  tst_LowStimulationModeAggregate.qml  tst_MessageBubble.qml  tst_ModelStoreActivation.cpp  tst_ModelStoreActivation.qml  tst_OperationSnapshot.qml  tst_PromptCardFillOnly.qml  tst_ProtocolV2.qml  tst_QmlArchitecture.cpp  tst_RTLMirror.qml  tst_ScreenContractMatrix.qml  tst_Security.cpp  tst_Security.qml  tst_SequenceGapResync.qml  tst_StartupLifecycle.qml  tst_StartupPipeline.qml  tst_SummaryFirstRendering.qml  tst_TabOrder.qml  tst_ThemeHexLock.qml  tst_TimelineModel.cpp  tst_ToolPillInTimeline.qml  tst_TypeScale.qml
qml/theme/: Motion.qml  Spacing.qml  Theme.qml  Type.qml  qmldir
rust/: .actual-conversation-validation-pulse  .conversation-storage-attachments-final-pulse  .gitignore  .storage-workspace-m1-validation-pulse  Cargo.toml  README.md
rust/.cargo/: audit.toml  config.toml
rust/crates/mukei-android-jni/: Cargo.toml  build.rs
rust/crates/mukei-bridge/: Cargo.toml  build.rs
rust/crates/mukei-core/: Cargo.toml
rust/crates/mukei-ffi-shim/: Cargo.toml
rust/docs/: AF.md  BS.md  PRD.md  SAAS_FOUNDATION.md  TRD.md  UNIVERSAL_STORAGE_RELEASE_EVIDENCE_TEMPLATE_v0.1.md  UNIVERSAL_STORAGE_RELEASE_GATE_v0.1.md  UXB.md
rust/grammars/: tool_calling.gbnf
rust/llama-cpp-prebuilt/: CMakeLists.txt  README.md  VENDORED_SNAPSHOT.md
rust/llama-cpp-prebuilt/shim/: mukei_llama_native.cpp  mukei_llama_native.h  smoke.cpp
rust/llama-cpp-stub/: Cargo.toml
rust/migrations/: 000_default_config.toml  V001__down.sql  V001__schema.sql  V002__down.sql  V002__recovery_state.sql  V003__down.sql  V003__tooling_and_saf.sql  V004__branching.sql  V004__down.sql  V005__audit_chain_checks.sql  V005__down.sql  V006__branch_message_constraints.sql  V007__message_status.sql  V008__down.sql  V008__schema_metadata_and_rag_tombstones.sql  V008__settings_and_secret_refs.sql  V009__down.sql  V009__schema_metadata_and_rag_tombstones.sql  V010__down.sql  V010__reliability_hardening.sql  V011__down.sql  V011__ui_projection_sessions.sql  V012__document_access_and_ingestion_jobs.sql  V012__down.sql  V013__down.sql  V013__saas_tenancy_entitlements_usage_ledger.sql  V014__runtime_projections.sql  V014__universal_storage_and_workspaces.sql  V015__workspace_scope_isolation_guards.sql  V016__storage_identity_and_recovery_hardening.sql  V017__conversation_storage_attachments.sql
rust/scripts/: verify_openssl_provenance.py
(+558 files in other folders)
