# =====================================================================
# Mukei Rust Workspace — TRD v0.7.5
#   * mukei-core       → pure-Rust agent / engine / RAG / storage
#   * mukei-bridge     → cdylib exposing the QML QObject via CXX-Qt + JNI
#   * mukei-ffi-shim   → plain `extern "C"` escape-hatch FFI (TRD §1.3)
# =====================================================================
[workspace]
resolver = "2"
members  = [
    "crates/mukei-core",
    "crates/mukei-bridge",
    "crates/mukei-ffi-shim",
    "llama-cpp-stub",
]
exclude  = [
    "target",
    "llama-cpp-prebuilt",
]

[workspace.package]
version     = "0.7.5"
edition     = "2021"
rust-version = "1.78"           # ≥ MSRV required by cxx-qt 0.6
license     = "LicenseRef-Mukei-Proprietary"
authors     = ["Mukei AI Architecture Pass"]

[workspace.dependencies]
# ----- Concurrency / Runtime --------------------------------------------
tokio       = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util  = { version = "0.7",  features = ["rt"] }
futures     = "0.3"
async-trait = "0.1"

# ----- CXX-Qt Bridge (TRD §1.2) -----------------------------------------
cxx         = "1.0"
cxx-qt      = "0.6"
cxx-qt-lib  = "0.6"

# ----- LLM Inference -----------------------------------------------------
# TRD §1.2.2 — pinned rev of llama-cpp-rs; only resolved when the
# `llama_cpp` feature is enabled (bridge crate / native Android build).
# The placeholder is a local stub path; flip to git when wiring the real
# llama.cpp prebuild (see llama-cpp-prebuilt/CMakeLists.txt and TRD §8.2).
llama-cpp-rs = { path = "llama-cpp-stub" }

# ----- RAG / Embeddings (TRD §4.1) --------------------------------------
candle-core         = "0.7"
candle-nn           = "0.7"
candle-transformers = "0.7"
usearch             = "2.15"
tokenizers          = "0.19"

# ----- Database (TRD §6 / BS v1.2) --------------------------------------
rusqlite    = { version = "0.31", features = ["bundled"] }
r2d2        = "0.8"
r2d2_sqlite = "0.24"

# ----- HTTP & parsing (TRD §5.1) ---------------------------------------
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
scraper = "0.19"
url     = "2.5"

# ----- Serialisation (TRD §12.5 strict config) -------------------------
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml       = "0.8"

# ----- Crypto / Hashes (TRD §12.3 wrapping-key pattern) -----------------
sha2    = "0.10"
blake3  = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
subtle  = "2.5"

# ----- Diagnostics ------------------------------------------------------
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-panic      = "0.1"

# ----- Error ------------------------------------------------------------
thiserror = "1.0"
anyhow    = "1.0"

# ----- Sync primitives --------------------------------------------------
parking_lot = "0.12"
once_cell   = "1.19"
bloomfilter = "1.0"

# ----- Misc -------------------------------------------------------------
uuid       = { version = "1.10", features = ["v4", "serde"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "serde"] }
meval      = "0.2"

# ============================================================================
# Workspace metadata
# ============================================================================
# IMPORTANT (TRD §1.3 / PRD G1 / REQ-ARCH-01 / REQ-DIA-04):
#   `panic = "unwind"` is MANDATORY for every shipped profile.
#   `std::panic::catch_unwind` (used by `mukei_core::guard::callback_with_guard!`,
#   the `mukei-ffi-shim` callback wrapper, and the panic-hook sink) is a no-op
#   under `panic = "abort"` — a single panic anywhere in the agent loop would
#   then SIGABRT the entire process instead of being caught at the FFI boundary.
#   Do NOT switch any profile back to `panic = "abort"`.
[profile.release]
lto              = "thin"
codegen-units    = 1
panic            = "unwind"   # REQUIRED — see note above
strip            = true
opt-level        = 3

[profile.dev]
opt-level        = 0
debug            = true
incremental      = true
panic            = "unwind"   # REQUIRED — see note above

# Android target uses the cheaper `z` because `wasm`-time profiling is off.
[profile.android-release]
inherits  = "release"
opt-level = "z"
lto       = "fat"
panic     = "unwind"          # REQUIRED — inherited but pinned explicitly
